--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 25, 2024 5:51 PM UTC.
+# Last generated Feb 27, 2024 7:38 AM UTC.
 
 # Locals
 
