Project update. [p][robotic]

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 28, 2024 6:13 PM UTC.
+# Last generated Mar 1, 2024 10:35 AM UTC.
 
 # Default
 
