--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Feb 28, 2024 6:13 PM UTC.
+ * Last generated using `./settings.mjs` Mar 1, 2024 10:35 AM UTC.
  */
 {
     "editor.formatOnType": false,
