--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Feb 28, 2024 6:13 PM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 1, 2024 10:35 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
