--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 28, 2024 6:13 PM UTC.
+# Last generated using `./wrangler.mjs` Mar 1, 2024 10:35 AM UTC.
 ##
 
 send_metrics = false
