Project update. [p][robotic]

--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 1, 2024 10:35 AM UTC.
+# Last generated Mar 1, 2024 2:56 PM UTC.
 
 # Locals
 
