--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 3, 2024 4:50 AM UTC.
+# Last generated Mar 3, 2024 2:59 PM UTC.
 
 # Locals
 
