--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 4, 2024 5:47 PM UTC.
+# Last generated Mar 6, 2024 5:23 AM UTC.
 
 # Locals
 
