--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mar 4, 2024 5:47 PM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 6, 2024 5:23 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
