--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 6, 2024 6:44 AM UTC.
+# Last generated Mar 6, 2024 3:39 PM UTC.
 
 [production]
 node >= 20.9.0
