--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 6, 2024 6:44 AM UTC.
+# Last generated Mar 6, 2024 3:39 PM UTC.
 
 # Locals
 
