--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 6, 2024 6:44 AM UTC.
+# Last generated using `./wrangler.mjs` Mar 6, 2024 3:39 PM UTC.
 ##
 
 send_metrics = false
