--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 11, 2024 10:26 PM UTC.
+# Last generated Mar 12, 2024 1:02 AM UTC.
 
 # Packages
 
