--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 12, 2024 8:33 AM UTC.
+# Last generated Mar 12, 2024 5:54 PM UTC.
 
 # Packages
 
