--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 12, 2024 10:25 PM UTC.
+# Last generated Mar 13, 2024 1:46 AM UTC.
 
 # Locals
 
