--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 12, 2024 10:25 PM UTC.
+ * Last generated using `./settings.mjs` Mar 13, 2024 1:46 AM UTC.
  */
 {
     "editor.formatOnType": false,
