--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 12, 2024 10:25 PM UTC.
+# Last generated using `./wrangler.mjs` Mar 13, 2024 1:46 AM UTC.
 ##
 
 send_metrics = false
