--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 13, 2024 6:30 AM UTC.
+# Last generated Mar 13, 2024 8:04 PM UTC.
 
 # Locals
 
