--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 13, 2024 11:37 PM UTC.
+ * Last generated using `./settings.mjs` Mar 14, 2024 2:40 AM UTC.
  */
 {
     "editor.formatOnType": false,
