--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 16, 2024 2:55 AM UTC.
+# Last generated Mar 16, 2024 1:27 PM UTC.
 
 # Default
 
