--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 16, 2024 6:23 PM UTC.
+# Last generated Mar 22, 2024 6:48 AM UTC.
 
 [production]
 node >= 20.9.0
