--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 16, 2024 6:23 PM UTC.
+# Last generated Mar 22, 2024 6:48 AM UTC.
 
 # Locals
 
