--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 16, 2024 6:23 PM UTC.
+ * Last generated using `./settings.mjs` Mar 22, 2024 6:48 AM UTC.
  */
 {
     "editor.formatOnType": false,
