--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 22, 2024 8:37 AM UTC.
+# Last generated Mar 22, 2024 8:27 PM UTC.
 
 # Default
 
