--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 22, 2024 8:37 AM UTC.
+# Last generated Mar 22, 2024 8:27 PM UTC.
 
 # Locals
 
