--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 25, 2024 11:07 PM UTC.
+# Last generated Mar 26, 2024 3:32 AM UTC.
 
 # Locals
 
