--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 25, 2024 11:07 PM UTC.
+ * Last generated using `./settings.mjs` Mar 26, 2024 3:32 AM UTC.
  */
 {
     "editor.formatOnType": false,
