--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 25, 2024 11:07 PM UTC.
+# Last generated using `./wrangler.mjs` Mar 26, 2024 3:32 AM UTC.
 ##
 
 send_metrics = false
