--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 27, 2024 3:05 AM UTC.
+# Last generated Mar 27, 2024 3:31 PM UTC.
 
 # Locals
 
