--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 27, 2024 6:04 PM UTC.
+# Last generated Mar 28, 2024 2:18 AM UTC.
 
 # Locals
 
