--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 27, 2024 6:04 PM UTC.
+# Last generated using `./wrangler.mjs` Mar 28, 2024 2:18 AM UTC.
 ##
 
 send_metrics = false
