--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mar 28, 2024 3:12 AM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 28, 2024 6:09 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
