--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 29, 2024 7:59 PM UTC.
+# Last generated Apr 2, 2024 5:41 AM UTC.
 
 # Packages
 
