--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mar 29, 2024 7:59 PM UTC.
+ * Last generated using `./tsconfig.mjs` Apr 2, 2024 5:41 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
