--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 29, 2024 7:59 PM UTC.
+# Last generated using `./wrangler.mjs` Apr 2, 2024 5:41 AM UTC.
 ##
 
 send_metrics = false
