--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 5, 2024 3:29 AM UTC.
+# Last generated Apr 5, 2024 10:12 PM UTC.
 
 [production]
 node >= 20.9.0
