--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 5, 2024 10:26 PM UTC.
+# Last generated Apr 7, 2024 12:20 AM UTC.
 
 # Locals
 
