--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Apr 5, 2024 10:26 PM UTC.
+ * Last generated using `./tsconfig.mjs` Apr 7, 2024 12:20 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
