--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 7, 2024 12:20 AM UTC.
+# Last generated Apr 8, 2024 12:42 PM UTC.
 
 # Default
 
