--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 8, 2024 2:19 PM UTC.
+# Last generated Apr 9, 2024 10:22 AM UTC.
 
 [production]
 node >= 20.9.0
