--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Apr 8, 2024 2:19 PM UTC.
+ * Last generated using `./tsconfig.mjs` Apr 9, 2024 10:22 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
