--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 9, 2024 11:10 PM UTC.
+# Last generated Apr 10, 2024 9:46 AM UTC.
 
 # Packages
 
