--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 10, 2024 9:46 AM UTC.
+# Last generated Apr 10, 2024 4:12 PM UTC.
 
 [production]
 node >= 20.9.0
