--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Apr 10, 2024 9:46 AM UTC.
+# Last generated using `./wrangler.mjs` Apr 10, 2024 4:12 PM UTC.
 ##
 
 send_metrics = false
