--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 18, 2025 12:10 AM UTC.
+# Last generated Feb 20, 2025 11:34 PM UTC.
 
 # Packages
 
