--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Feb 20, 2025 11:34 PM UTC.
+ * Last generated using `./settings.mjs` Feb 21, 2025 2:20 AM UTC.
  */
 {
     "editor.formatOnType": false,
