--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 20, 2025 11:34 PM UTC.
+# Last generated Feb 21, 2025 2:20 AM UTC.
 
 # Locals
 
