--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 20, 2025 11:34 PM UTC.
+# Last generated using `./wrangler.mjs` Feb 21, 2025 2:20 AM UTC.
 ##
 
 send_metrics = false
