Project update. [p][robotic]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Feb 26, 2025 9:41 AM UTC.
+ * Last generated using `./tsconfig.mjs` Feb 27, 2025 1:19 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
