--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 26, 2025 9:41 AM UTC.
+# Last generated Feb 27, 2025 1:19 PM UTC.
 
 # Locals
 
