--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,9 +7,9 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 26, 2025 9:41 AM UTC.
+# Last generated using `./wrangler.mjs` Feb 27, 2025 1:19 PM UTC.
 ##
 
 send_metrics = false
-compatibility_date = "2024-09-23"
-compatibility_flags = [ ]
+compatibility_date = "2025-02-27"
+compatibility_flags = [ "nodejs_compat" ]
