Project update. [p][robotic]

--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 27, 2025 8:14 PM UTC.
+# Last generated Mar 2, 2025 4:45 AM UTC.
 
 [production]
 node >= 20.9.0
