--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,9 +7,12 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 27, 2025 8:14 PM UTC.
+# Last generated using `./wrangler.mjs` Mar 2, 2025 4:45 AM UTC.
 ##
 
 send_metrics = false
-compatibility_date = "2025-02-27"
+compatibility_date = "2025-02-14"
 compatibility_flags = [ "nodejs_compat" ]
+
+[env]
+dev = { }
