--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 2, 2025 4:45 AM UTC.
+# Last generated Mar 2, 2025 4:56 AM UTC.
 
 # Locals
 
@@ -268,6 +268,8 @@ test
 tests
 *.test.*
 *.tests.*
+test-d
+tests-d
 *.test-d.*
 *.tests-d.*
 
@@ -277,6 +279,8 @@ spec
 specs
 *.spec.*
 *.specs.*
+spec-d
+specs-d
 *.spec-d.*
 *.specs-d.*
 
