--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 2, 2025 6:43 AM UTC.
+# Last generated Mar 2, 2025 4:36 PM UTC.
 
 # Locals
 
