--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 2, 2025 6:43 AM UTC.
+ * Last generated using `./settings.mjs` Mar 2, 2025 4:36 PM UTC.
  */
 {
     "editor.formatOnType": false,
