--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 2, 2025 6:43 AM UTC.
+# Last generated using `./wrangler.mjs` Mar 2, 2025 4:36 PM UTC.
 ##
 
 send_metrics = false
