--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 2, 2025 4:36 PM UTC.
+# Last generated Mar 3, 2025 11:33 AM UTC.
 
 # Default
 
