--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mar 2, 2025 4:36 PM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 3, 2025 11:33 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -110,7 +110,6 @@
         "lib": ["es2022", "dom", "webworker"],
         "types": [
             "vite/client",
-            "@cloudflare/vitest-pool-workers",
             "unplugin-icons/types/preact",
             "@types/mdx",
             "dayjs/plugin/advancedFormat",
