Project update. [p][robotic]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 3, 2025 11:33 AM UTC.
+ * Last generated using `./settings.mjs` Mar 4, 2025 1:45 PM UTC.
  */
 {
     "editor.formatOnType": false,
@@ -81,6 +81,12 @@
         "**/src/cargo/_routes.{json,×××××××}": "jsonc"
     },
     "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
         "**/._*": true,
         "**/.~*": true,
         "**/.idea": true,
@@ -101,21 +107,16 @@
         "**/.docker": true,
         "**/.vagrant": true,
         "**/.elasticbeanstalk": true,
-        "**/.git": true,
-        "**/.svn": true,
         "**/_svn": true,
         "**/.svnignore": true,
         "**/.bzr": true,
         "**/.bzrignore": true,
-        "**/.hg": true,
         "**/.hgignore": true,
-        "**/Thumbs.db": true,
         "**/ehthumbs.db": true,
         "**/Desktop.ini": true,
         "**/$RECYCLE.BIN": true,
         "**/Icon": true,
         "**/*.icloud": true,
-        "**/.DS_Store": true,
         "**/.disk_label": true,
         "**/.LSOverride": true,
         "**/.VolumeIcon.icns": true,
@@ -131,24 +132,24 @@
         "**/.DocumentRevisions-V100": true,
         "**/Network Trash Folder": true,
         "**/Temporary Items": true,
-        ".*": true,
+        ".*": false,
         ".well-known": false,
         "*.tsbuildinfo": true,
-        "*.config.*": true,
-        "wrangler.*": true,
-        "tsconfig.*": true,
-        "dev-types.d.ts": true,
-        "config.gypi": true,
-        "dev/.files": true,
-        ".yarn": true,
-        "vendor": true,
-        "node_modules": true,
-        "jspm_packages": true,
-        "bower_components": true,
-        "yarn.lock": true,
-        "composer.lock": true,
-        "package-lock.json": true,
-        "LICENSE.txt": true
+        "*.config.*": false,
+        "wrangler.*": false,
+        "tsconfig.*": false,
+        "dev-types.d.ts": false,
+        "config.gypi": false,
+        "dev/.files": false,
+        ".yarn": false,
+        "vendor": false,
+        "node_modules": false,
+        "jspm_packages": false,
+        "bower_components": false,
+        "yarn.lock": false,
+        "composer.lock": false,
+        "package-lock.json": false,
+        "LICENSE.txt": false
     },
     "explorer.excludeGitIgnore": false,
     "explorerExclude.backup": {},
