--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 3, 2025 11:33 AM UTC.
+# Last generated Mar 4, 2025 1:45 PM UTC.
 
 # Packages
 
