--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 5, 2025 1:26 PM UTC.
+ * Last generated using `./settings.mjs` Mar 6, 2025 12:02 AM UTC.
  */
 {
     "editor.formatOnType": false,
