--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 5, 2025 1:26 PM UTC.
+# Last generated Mar 6, 2025 12:02 AM UTC.
 
 # Locals
 
