--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 5, 2025 1:26 PM UTC.
+# Last generated using `./wrangler.mjs` Mar 6, 2025 12:02 AM UTC.
 ##
 
 send_metrics = false
