--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 6, 2025 4:19 AM UTC.
+# Last generated Mar 6, 2025 3:41 PM UTC.
 
 # Locals
 
