--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 7, 2025 10:58 PM UTC.
+# Last generated Mar 8, 2025 3:58 AM UTC.
 
 # Packages
 
