--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mar 7, 2025 10:58 PM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 8, 2025 3:58 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
