Project update. [p][robotic]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Mar 8, 2025 5:44 AM UTC.
+ * Last generated using `./settings.mjs` Mar 11, 2025 11:02 AM UTC.
  */
 {
     "editor.formatOnType": false,
@@ -226,8 +226,8 @@
     "eslint.run": "onType",
     "eslint.runtime": "node",
     "eslint.useESLintClass": true,
+    "eslint.useFlatConfig": true,
     "eslint.codeActionsOnSave.mode": "all",
-    "eslint.experimental.useFlatConfig": true,
     "eslint.workingDirectories": [
         {
             "mode": "auto"
