--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 11, 2025 11:02 AM UTC.
+# Last generated Mar 12, 2025 5:56 PM UTC.
 
 # Packages
 
