--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 12, 2025 10:26 PM UTC.
+# Last generated Mar 13, 2025 1:26 AM UTC.
 
 # Packages
 
