--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.1021",
+    "version": "1.0.1022",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -341,7 +341,7 @@
         "preact": "10.20.1",
         "preact-render-to-string": "6.4.1",
         "semver": "7.5.4",
-        "tailwindcss": "3.4.0",
+        "tailwindcss": "3.4.17",
         "valibot": "1.0.0-rc.3"
     },
     "peerDependenciesMeta": {},
@@ -350,7 +350,9 @@
     "devDependencies": {
         "@clevercanyon/dev-deps": "^1.0.404"
     },
-    "overrides": {},
+    "overrides": {
+        "tailwindcss": "3.4.17"
+    },
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
