--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mar 12, 2025 10:26 PM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 13, 2025 1:26 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
