Removing Tailwind from NPM overrides.

--- a/package.json
+++ b/package.json
@@ -350,9 +350,7 @@
     "devDependencies": {
         "@clevercanyon/dev-deps": "^1.0.404"
     },
-    "overrides": {
-        "tailwindcss": "3.4.17"
-    },
+    "overrides": {},
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
