--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.1023",
+    "version": "1.0.1026",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -329,28 +329,31 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@medv/finder": "3.1.0",
+        "@medv/finder": "4.0.2",
         "@preact/signals": "1.2.3",
-        "color2k": "2.0.2",
-        "dayjs": "1.11.10",
-        "ignore": "5.3.0",
+        "color2k": "2.0.3",
+        "dayjs": "1.11.13",
+        "ignore": "7.0.3",
         "ip-regex": "5.0.0",
-        "micro-memoize": "4.1.2",
+        "micro-memoize": "4.1.3",
         "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.149",
         "parse-css-color": "0.2.1",
         "preact": "10.20.1",
         "preact-render-to-string": "6.4.1",
-        "semver": "7.5.4",
+        "semver": "7.7.1",
         "tailwindcss": "3.4.17",
-        "valibot": "1.0.0-rc.3"
+        "valibot": "1.0.0-rc.4"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.405"
+        "@clevercanyon/dev-deps": "^1.0.407"
     },
-    "overrides": {},
+    "overrides": {
+        "@upstash/ratelimit": "2.0.5",
+        "@upstash/redis": "1.34.5"
+    },
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
