--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.1026",
+    "version": "1.0.1027",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -350,10 +350,7 @@
     "devDependencies": {
         "@clevercanyon/dev-deps": "^1.0.407"
     },
-    "overrides": {
-        "@upstash/ratelimit": "2.0.5",
-        "@upstash/redis": "1.34.5"
-    },
+    "overrides": {},
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
