--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 13, 2025 7:22 PM UTC.
+# Last generated Mar 14, 2025 3:15 AM UTC.
 
 # Default
 
