--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 19, 2025 12:32 AM UTC.
+# Last generated Mar 19, 2025 6:20 PM UTC.
 
 # Locals
 
