--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Mar 19, 2025 12:32 AM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 19, 2025 6:20 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
