--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Mar 19, 2025 12:32 AM UTC.
+# Last generated using `./wrangler.mjs` Mar 19, 2025 6:20 PM UTC.
 ##
 
 compatibility_date = "2025-02-14"
